name:                Compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vrom911/Compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Veronika Romashkina
maintainer:          vrom911@gmail.com
copyright:           2017 vrom911
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Compiler.Rum.Interpreter.Rummer
                       Compiler.Rum.Internal.Parser
                       Compiler.Rum.Interpreter.Rumlude
                       Compiler.Rum.Internal.AST
                       Compiler.Rum.Internal.Rumlude
                       Compiler.Rum.Internal.ToString
                       Compiler.Rum.StackMachine.Stacker
                       Compiler.Rum.StackMachine.Structure
                       Compiler.Rum.StackMachine.Translator
                       Compiler.Rum.StackMachine.Util
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , extra
                     , megaparsec
                     , mtl
                     , safe
                     , text
                     , transformers
                     , unordered-containers
  default-extensions: OverloadedStrings
                      RecordWildCards
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Compiler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Compiler
                     , megaparsec
                     , mtl
                     , text
                     , transformers
  default-extensions: OverloadedStrings
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite Compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Compiler
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vrom911/Compiler
