cabal-version:       2.4
name:                Rum
version:             0.0.0.0
synopsis:            Rum language
description:         Implementation of Compiler for Rum language.
homepage:            https://github.com/vrom911/Rum#readme
bug-reports:         https://github.com/vrom911/Rum/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Veronika Romashkina
maintainer:          Veronika Romashkina <vrom911@gmail.com>
copyright:           2017-2019 vrom911
category:            Compiler
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/vrom911/Rum.git

common common-options
  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveAnyClass
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude

                       Rum.Internal.AST
                       Rum.Internal.Rumlude
                       Rum.Internal.ToString
                       Rum.Internal.Util
                       Rum.Internal.Parser
                       Rum.Interpreter.Rumlude
                       Rum.Interpreter.Rummer
                       Rum.StackMachine.Stacker
                       Rum.StackMachine.Structure
                       Rum.StackMachine.Translator
                       Rum.StackMachine.Util
                       Rum.Compiler.CodeGen
                       Rum.Compiler.Emitter
                       Rum.Compiler.Rummer
                       Rum.Compiler.JIT
  build-depends:       containers
                     , bytestring >= 0.10
                     , hashable
                     , extra
                     , llvm-hs
                     , llvm-hs-pure
                     , megaparsec
                     , mtl
                     , parser-combinators
                     , safe
                     , text
                     , transformers
                     , unordered-containers
  ghc-options:         -dynamic

  include-dirs:        runtime
  c-sources:           runtime/runtime.c

executable Rum
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       Rum
                     , megaparsec
  ghc-options:         -dynamic

test-suite Rum-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Rum
  ghc-options:         -dynamic
